add github logic
